--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
-<!DOCTYPE html> 
+<!doctype html> 
 <html>
 
 
+<head>
+	<title>Emily in Paris (Netflix Original TV Show</title>
+	<meta charset="utf-8" />
+	<meta http-equiv="Content-type" content="text/html; charset=utf-8" /> 
+	<meta name="viewport" content="width=device-width, initial-scale=1" /> 
+	<meta name="keywords" content="HTML">
+</head>
+
 <body>
-	<h1>Hello World!</h1>
+<p>This is my first webpage!</p> 
 
+</body>
 
-</body> 
 </html>
